Refactor the code for test files to correspond to the addition of GUI instead of text UI